# mfat

./: dune-project  mfat.opam
lib/: dune  mfat.ml  mfat.mli
test/: simple.t
