opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/mfat"
dev-repo: "git+https://github.com/robur-coop/mfat.git"
bug-reports: "https://github.com/robur-coop/mfat/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.1.0"}
  "cmdliner"
  "bstr"
  "cachet"
  "fmt"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

synopsis: "An implementation of FAT32 in OCaml"
